fixed stretching height problem of chatbot

--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,8 @@ header {
 
 .flex-container {
   display: flex;
+  height: fit-content;
+  max-height: 500px;
 }
 
 .welcome-image {
